[project]
name = "langgraph-mongodb-demo"
version = "0.1.0"
description = "A demonstration project showcasing LangGraph integration with MongoDB"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
]
